--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Drum Machine</title>
+    <title>Free Drum Machine - by rostik</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,7 +24,7 @@
             <div class="panel">
                 <h2>Settings</h2>
                 <select id="kit">
-                    <option value="webaudio">Web Audio</option>
+                    <option value="webaudio">Acoustic</option>
                     <option value="808">TR-808</option>
                 </select>
                 <select id="timeSig">
