add download button and various

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <a href="single.html" download class="download-btn"><img src="favicon.ico" width="16" height="16" alt="Download"></a>
     <div class="container">
         <div class="panels">
             <div class="panel">
